updated flashcards